# qt.picture-screensaver

./: CMakeLists.txt  Makefile  README.md
cmake/: DebPackageConfig.cmake  SparkBuild.cmake  SparkEnvConfig.cmake  SparkFindQt5Config.cmake  SparkInstall.cmake  SparkMacrosConfig.cmake  package-deb.descript
resources/: sources.qrc
rootfs/usr/lib/systemd/user/: picture-screensaver.service
rootfs/usr/share/applications/: picture-screensaver-auto-config.desktop  picture-screensaver-config-panel.desktop
rootfs/usr/share/glib-2.0/schemas/: com.gitee.zinface.picture-screensaver.gschema.xml
rootfs/usr/share/picture-screensaver/: dde-default-screensaver.sh
src/: main.cpp
src/BaseConfig/: BaseConfig  baseconfig.cpp  baseconfig.h
src/ScreenSaverConfig/: CMakeLists.txt  ScreenSaverConfig  ScreenSaverConfig.cpp  ScreenSaverConfig.h
src/ScreenSaverImage/: CMakeLists.txt  ScreenSaveImage  ScreenSaverImage.cpp  ScreenSaverImage.h
src/ScreenWidgets/TimeDateWidget/: timedatewidget.cpp  timedatewidget.h  timedatewidget.ui
tools/ConfigPanel/: configpanelwindow.cpp  configpanelwindow.h  configpanelwindow.ui  main.cpp
utils/ScreenUtils/: ScreenUtils  ScreenUtils.cpp  ScreenUtils.h
